--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ src: url('Montserrat.eot?#iefix') format(‘embedded-opentype’),
 	background-color: rgba(0,0,0,0.85);
 	padding-bottom: 0%;
 	margin-top: -1%;
-	width: 100%;
+	width: 100vw;
 	margin-left: -5%;
 
 }
@@ -57,20 +57,20 @@ src: url('Montserrat.eot?#iefix') format(‘embedded-opentype’),
 .drop-menu h3 {
 	color: white;
 	font-family: 'Montserrat', sans-serif;
-	font-size: vw;
+	font-size: 1.5vw;
 }
 
 .drop-menu ul li{
 	list-style: none;
 	display: inline-block;
 	width: auto;
-  float: right;
-	padding-left: 2%;
-	padding-right: 2%;
+  float: left;
+	padding-left: 2vw;
+	padding-right: 2vw;
 }
 
-.drop-menu li:last-child {
-	padding-right: 4%;
+.drop-menu li:first-child {
+	padding-left: 2vw;
 }
 
 .drop-menu h3:hover {
@@ -105,18 +105,19 @@ a:active {
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
 	text-shadow: 1px 2px black;
-	/*padding-right: 30%;*/
-	/*padding-left: 4%;*/
+	/*padding-right: 10%;
+	padding-left: 10%;*/
 	word-wrap: break-word;
 	font-size: 10vw;
 	line-height: 115%;
+	padding-top: 10vh;
 }
 
 .title {
-	padding-bottom: 10%;
+	padding-bottom: 15%;
 	background-image: url('Images/nightRoad.jpeg');
 	background-size: cover;
-	height: 100%;
+	height: 100vh;
 	background-position: top;
 }
 
@@ -125,7 +126,7 @@ a:active {
 	font-size: 3.5vw;
 	/*padding-right: 0.0625%;*/
 	margin-top: -7%;
-	padding-bottom: 7%;
+	/*padding-bottom: 7%;
 	/*margin-left: 5%;*/
 	color: white;
 }
@@ -133,21 +134,27 @@ a:active {
 .about {
 	background-color: white;
 	/*margin-top: 25%;*/
-	padding-top: 4%;
+	height: 100vh;
+	width: 100vw;
+	padding-bottom: 5%;
+	margin-bottom: 5%;
+
+	/*padding-top: 4%;
 	padding-bottom: 0%;
-	margin-bottom: 8%;
+	margin-bottom: 8%;*/
 }
 
 .about h1 {
 	font-family: 'Kaushan Script', cursive;
-	font-size: 6vw;
+	font-size: 12vmin;
+	padding-top: 5%;
 }
 
 .about p {
 	padding-left: 10%;
 	padding-right: 10%;
 	font-size: 1.75vw;
-	line-height: 215%;
+	line-height: 6vh;
 }
 
 .tint {
@@ -172,7 +179,7 @@ a:active {
 }
 
 .coastalOnImg h1 {
-	padding-top: 30px;
+	padding-top: 5%;
 	text-shadow: 1px 2px black;
 	color: white;
 	font-size: 6vw;
@@ -216,8 +223,7 @@ a:active {
 }
 
 .wildInfo h1 {
-	margin-top: -3%;
-	/*padding-top: 10%;*/
+	padding-top: 5%;
 	text-shadow: 1px 2px black;
 	color: white;
 	font-size: 6vw;
@@ -225,14 +231,12 @@ a:active {
 }
 
 .wildOnImg {
-	background-image: url('Images/TrialImages/tent.jpeg');
-	background-position: top;
+	background-image: url('Images/tent.jpeg');
+	background-position: top:left;
 	background-size: cover;
 	width: auto;
-	padding-top: 5%;
-	padding-bottom: 5%;
-	margin-bottom: -5%;
-	margin-top: 3%;
+	margin-bottom:-5%;
+	padding-bottom: 9%;
 }
 
 .infoOnWildImg {
@@ -243,7 +247,6 @@ a:active {
 
 .infoOnWildImg h2 {
 	font-size: 4vw;
-	color: black;
 }
 
 .infoOnWildImg p {
@@ -251,9 +254,9 @@ a:active {
 	margin-bottom: 3%;
 	margin-left: 3%;
 	margin-right: 3%;
-	padding-bottom: 1%;
-	padding-top: 3%;
 	font-size: 2vw;
+	padding-left: 0%;
+	padding-right: 0%;
 	line-height: 250%;
 	text-shadow: 1px 1px black;
 }
@@ -265,7 +268,7 @@ a:active {
 
 
 .cityInfo h1 {
-	padding-top: 3%;
+	padding-top: 5%;
 	text-shadow: 1px 2px black;
 	color: white;
 	font-size: 6vw;
