--- a/style.css
+++ b/style.css
@@ -1,17 +1,10 @@
-
-/*remove default browser padding*/
-* {
-	/*margin:0; padding:0; */
-}
-
 body {
-	/*background-image: url('Images/TrialImages/liftoff.jpg');*/
 	background-color: white;
 	background-size:contain;
 	height: auto;
 	width: 100%;
+	height: 100%;
 	background-repeat: no-repeat;
-	/*background-position: center;*/
 	margin:0;
 	padding:0;
 }
@@ -57,7 +50,7 @@ src: url('Montserrat.eot?#iefix') format(‘embedded-opentype’),
 .drop-menu h3 {
 	color: white;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 1.5vw;
+	font-size: 1.5vmax;
 }
 
 .drop-menu ul li{
@@ -105,10 +98,8 @@ a:active {
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
 	text-shadow: 1px 2px black;
-	/*padding-right: 10%;
-	padding-left: 10%;*/
 	word-wrap: break-word;
-	font-size: 10vw;
+	font-size: 10vmax;
 	line-height: 115%;
 	padding-top: 10vh;
 }
@@ -123,25 +114,16 @@ a:active {
 
 .title p {
 	text-align: center;
-	font-size: 3.5vw;
-	/*padding-right: 0.0625%;*/
+	font-size: 3.5vmax;
 	margin-top: -7%;
-	/*padding-bottom: 7%;
-	/*margin-left: 5%;*/
 	color: white;
 }
 
 .about {
 	background-color: white;
-	/*margin-top: 25%;*/
-	height: 100vh;
-	width: 100vw;
+	min-height: 100vh;
 	padding-bottom: 5%;
 	margin-bottom: 5%;
-
-	/*padding-top: 4%;
-	padding-bottom: 0%;
-	margin-bottom: 8%;*/
 }
 
 .about h1 {
@@ -153,17 +135,16 @@ a:active {
 .about p {
 	padding-left: 10%;
 	padding-right: 10%;
-	font-size: 1.75vw;
+	font-size: 3vmin;
 	line-height: 6vh;
 }
 
 .tint {
     z-index: 1;
-    height: 100%;
     width: 100%;
     position: static;
     overflow: auto;
-		margin-top: 0%;
+		margin-top: 20vh;
 		padding-bottom: 0%;
     top: 0px;
     left: 0px;
@@ -171,17 +152,14 @@ a:active {
 }
 
 .coastalInfo {
-	height: 100%;
+	min-height: 100%;
 	width: auto;
-	/*padding-top: 10px;*/
-	/*padding-bottom: 20%;*/
-	/*background-color: #0C5E84;*/
 }
 
 .coastalOnImg h1 {
 	padding-top: 5%;
-	text-shadow: 1px 2px black;
-	color: white;
+	text-shadow: 1px 1px black;
+	color: rgb(74, 74, 74);
 	font-size: 6vw;
 	font-family: 'Montserrat', sans-serif;
 }
@@ -191,6 +169,7 @@ a:active {
 	background-position: top:left;
 	background-size: cover;
 	width: auto;
+	min-height: 100vh;
 	margin-bottom:-5%;
 	padding-bottom: 9%;
 }
@@ -203,6 +182,8 @@ a:active {
 
 .infoOnImg h2 {
 	font-size: 4vw;
+	color: rgb(74, 74, 74);
+
 }
 
 .infoOnImg p {
@@ -210,10 +191,10 @@ a:active {
 	margin-bottom: 3%;
 	margin-left: 3%;
 	margin-right: 3%;
-	font-size: 2vw;
+	font-size: 3vmin;
 	padding-left: 0%;
 	padding-right: 0%;
-	line-height: 250%;
+	line-height: 8vh;
 	text-shadow: 1px 1px black;
 }
 
@@ -224,8 +205,8 @@ a:active {
 
 .wildInfo h1 {
 	padding-top: 5%;
-	text-shadow: 1px 2px black;
-	color: white;
+	text-shadow: 1px 1px black;
+	color: rgb(74, 74, 74);
 	font-size: 6vw;
 	font-family: 'Montserrat', sans-serif;
 }
@@ -235,6 +216,7 @@ a:active {
 	background-position: top:left;
 	background-size: cover;
 	width: auto;
+	min-height: 100vh;
 	margin-bottom:-5%;
 	padding-bottom: 9%;
 }
@@ -247,6 +229,7 @@ a:active {
 
 .infoOnWildImg h2 {
 	font-size: 4vw;
+	color: rgb(74, 74, 74);
 }
 
 .infoOnWildImg p {
@@ -254,10 +237,10 @@ a:active {
 	margin-bottom: 3%;
 	margin-left: 3%;
 	margin-right: 3%;
-	font-size: 2vw;
+	font-size: 3vmin;
 	padding-left: 0%;
 	padding-right: 0%;
-	line-height: 250%;
+	line-height: 8vh;
 	text-shadow: 1px 1px black;
 }
 
@@ -280,8 +263,8 @@ a:active {
 	background-position: top:left;
 	background-size: cover;
 	width: auto;
+	min-height: 100vh;
 	padding-bottom: 12%;
-	/*margin-bottom: -5%;*/
 }
 
 .infoOnCityImg {
@@ -299,17 +282,20 @@ a:active {
 	margin-bottom: 3%;
 	margin-left: 3%;
 	margin-right: 3%;
-	font-size: 2vw;
+	font-size: 3vmin;
 	padding-left: 0%;
 	padding-right: 0%;
-	line-height: 250%;
+	line-height: 8vh;
 	text-shadow: 1px 1px black;
 }
 
 .signUp {
 	background-color: #0C5E84;
 	padding-top: 1%;
+	margin-top: 0%;
+
 	padding-bottom: 5%;
+	min-height: 100vh;
 }
 
 .signUp h1 {
@@ -317,6 +303,7 @@ a:active {
 	font-family: 'Kaushan Script', cursive;
 	font-style:bold;
 	font-size: 12vw;
+	margin-top: 2%;
 }
 
 .signUp h2 {
@@ -328,6 +315,7 @@ a:active {
 
 .signUpForm {
 	margin-left: 15%;
+	margin-top: -3%;
 }
 
 .signUpForm input[type=text]{
@@ -344,7 +332,6 @@ a:active {
 }
 
 .signUpForm input[type=submit] {
-	/*margin-left: 15%;*/
 	background-color: white;
 	color: black;
 	border:none;
@@ -371,6 +358,7 @@ a:active {
 	margin-bottom: -5%;
 	margin-left: 10%;
 	margin-right: 10%;
+	min-height: 100vh;
 }
 
 .contactUs h1 {
@@ -381,7 +369,7 @@ a:active {
 .contactUs p {
 	margin-right: 20%;
 	line-height: 180%;
-	font-size: 2vw;
+	font-size: 3vmin;
 }
 
 .messageForm input[type=text]{
@@ -398,7 +386,6 @@ a:active {
 }
 
 .messageForm input[type=submit] {
-	/*margin-left: 15%;*/
 	background-color: white;
 	color: black;
 	border: 1px solid black;
