--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ src: url('Montserrat.eot?#iefix') format(‘embedded-opentype’),
 .drop-menu h3 {
 	color: white;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 1.5vmax;
+	font-size: 1.5vw;
 }
 
 .drop-menu ul li{
@@ -122,7 +122,7 @@ a:active {
 .about {
 	background-color: white;
 	min-height: 100vh;
-	padding-bottom: 5%;
+	padding-bottom: -5%;
 	margin-bottom: 5%;
 }
 
@@ -136,7 +136,7 @@ a:active {
 	padding-left: 10%;
 	padding-right: 10%;
 	font-size: 3vmin;
-	line-height: 6vh;
+	line-height: 4.5vw;
 }
 
 .tint {
@@ -144,7 +144,7 @@ a:active {
     width: 100%;
     position: static;
     overflow: auto;
-		margin-top: 20vh;
+		margin-top: 10vh;
 		padding-bottom: 0%;
     top: 0px;
     left: 0px;
@@ -152,15 +152,16 @@ a:active {
 }
 
 .coastalInfo {
-	min-height: 100%;
+	height: 0%;
 	width: auto;
+	padding-top: 0%
 }
 
 .coastalOnImg h1 {
-	padding-top: 5%;
+	padding-top: 14vh;
 	text-shadow: 1px 1px black;
 	color: rgb(74, 74, 74);
-	font-size: 6vw;
+	font-size: 7vw;
 	font-family: 'Montserrat', sans-serif;
 }
 
@@ -204,10 +205,10 @@ a:active {
 }
 
 .wildInfo h1 {
-	padding-top: 5%;
+	padding-top: 14vh;
 	text-shadow: 1px 1px black;
 	color: rgb(74, 74, 74);
-	font-size: 6vw;
+	font-size: 7vw;
 	font-family: 'Montserrat', sans-serif;
 }
 
@@ -251,10 +252,10 @@ a:active {
 
 
 .cityInfo h1 {
-	padding-top: 5%;
+	padding-top: 14vh;
 	text-shadow: 1px 2px black;
 	color: white;
-	font-size: 6vw;
+	font-size: 7vw;
 	font-family: 'Montserrat', sans-serif;
 }
 
@@ -303,19 +304,19 @@ a:active {
 	font-family: 'Kaushan Script', cursive;
 	font-style:bold;
 	font-size: 12vw;
-	margin-top: 2%;
+	margin-top: 8%;
 }
 
 .signUp h2 {
 	color: black;
 	font-size: 6vw;
 	font-family: 'Montserrat', sans-serif;
-	margin-top: -7%;
+	margin-top: -5%;
 }
 
 .signUpForm {
 	margin-left: 15%;
-	margin-top: -3%;
+	padding-top: 5vmin;
 }
 
 .signUpForm input[type=text]{
@@ -409,6 +410,7 @@ a:active {
 .messageForm textarea {
 	resize:vertical;
 	font-size: 20px;
+	width: 80vw;
 }
 
 .footer {
