--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ a:active {
 }
 
 .title p {
+	font-family: 'Arimo', sans-serif;
 	text-align: center;
 	font-size: 3.5vmax;
 	margin-top: -7%;
@@ -133,6 +134,7 @@ a:active {
 }
 
 .about p {
+	font-family: 'Arimo', sans-serif;
 	padding-left: 10%;
 	padding-right: 10%;
 	font-size: 3vmin;
@@ -182,7 +184,8 @@ a:active {
 }
 
 .infoOnImg h2 {
-	font-size: 4vw;
+	font-family: 'Arimo', sans-serif;
+	font-size: 3.5vw;
 	color: rgb(74, 74, 74);
 	margin-top: -5%;
 
@@ -190,6 +193,7 @@ a:active {
 }
 
 .infoOnImg p {
+	font-family: 'Arimo', sans-serif;
 	margin-top: 3%;
 	margin-bottom: 3%;
 	margin-left: 3%;
@@ -231,12 +235,14 @@ a:active {
 }
 
 .infoOnWildImg h2 {
-	font-size: 4vw;
+	font-family: 'Arimo', sans-serif;
+	font-size: 3.5vw;
 	color: rgb(74, 74, 74);
 	margin-top: -5%;
 }
 
 .infoOnWildImg p {
+	font-family: 'Arimo', sans-serif;
 	margin-top: 3%;
 	margin-bottom: 3%;
 	margin-left: 3%;
@@ -257,7 +263,7 @@ a:active {
 .cityInfo h1 {
 	padding-top: 14vh;
 	text-shadow: 1px 2px black;
-	color: white;
+	color: rgb(74, 74, 74);
 	font-size: 7vw;
 	font-family: 'Montserrat', sans-serif;
 }
@@ -278,12 +284,15 @@ a:active {
 }
 
 .infoOnCityImg h2 {
-	font-size: 4vw;
+	color: rgb(74, 74, 74);
+	font-family: 'Arimo', sans-serif;
+	font-size: 3.5vw;
 	margin-top: -5%;
 
 }
 
 .infoOnCityImg p {
+	font-family: 'Arimo', sans-serif;
 	margin-top: 3%;
 	margin-bottom: 3%;
 	margin-left: 3%;
@@ -337,7 +346,7 @@ a:active {
    -webkit-transition: box-shadow 0.3s;
 }
 
-.signUpForm input[type=button] {
+.signUpForm input[type=reset] {
 	background-color: white;
 	color: black;
 	border:none;
@@ -348,7 +357,7 @@ a:active {
 	border-radius: 4px;
 }
 
-.signUpForm input:hover[type=button] {
+.signUpForm input:hover[type=reset] {
 	background-color: #D18D3C;
 }
 
@@ -373,6 +382,7 @@ a:active {
 }
 
 .contactUs p {
+	font-family: 'Arimo', sans-serif;
 	margin-right: 20%;
 	line-height: 180%;
 	font-size: 3vmin;
@@ -391,7 +401,7 @@ a:active {
    -webkit-transition: box-shadow 0.3s;
 }
 
-.messageForm input[type=button] {
+.messageForm input[type=reset] {
 	background-color: white;
 	color: black;
 	border: 1px solid black;
@@ -403,7 +413,7 @@ a:active {
 	margin-bottom: 5%;
 }
 
-.messageForm input:hover[type=button] {
+.messageForm input:hover[type=reset] {
 	background-color: #0C5E84;
 }
 
@@ -425,6 +435,7 @@ a:active {
 }
 
 .footer h2 {
+	font-family: 'Arimo', sans-serif;
 	font-size: 17px;
 	color: white;
 	margin-right: 4%;
@@ -432,12 +443,14 @@ a:active {
 }
 
 .footer p {
+	font-family: 'Arimo', sans-serif;
 	font-size: 12px;
 	color: white;
 	margin-right: 4%;
 }
 
 .footer a {
+	font-family: 'Arimo', sans-serif;
 	font-size: 12px;
 }
 
