--- a/indexStyle.less
+++ b/indexStyle.less
@@ -24,7 +24,7 @@ body {
     position: relative; // Allows "explore" text to stay at bottom
     height: 800px;
     height: 100vh;
-    background-image: url('images/planning-min-min.jpeg');
+    background-image: url('Images/planning-min-min.jpeg');
     background-size: cover;
     background-position: center;
     img {
@@ -140,19 +140,19 @@ body {
       }
 
       #leftImg1, #mobile1 {
-        background-image: url('./images/electricity.png');
+        background-image: url('./Images/electricity.png');
         background-repeat: no-repeat;
         background-size:contain;
         background-position: center;
       }
       #rightImg2, #mobile2 {
-        background-image: url('./images/shieldBlue.png');
+        background-image: url('./Images/shieldBlue.png');
         background-repeat: no-repeat;
         background-size:contain;
         background-position: center;
       }
       #leftImg3 , #mobile3{
-        background-image: url('./images/piggy-bank.png');
+        background-image: url('./Images/piggy-bank.png');
         background-repeat: no-repeat;
         background-size:contain;
         background-position: center;
